--- a/KiKickBoard/KiKickBoard/Info.plist
+++ b/KiKickBoard/KiKickBoard/Info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>앱을 열때마다 위치주소 가져오기 허용</string>
 	<key>NMFClientId</key>
 	<string>2xkmerjbz5</string>
 	<key>UIApplicationSceneManifest</key>
@@ -23,5 +21,9 @@
 			</array>
 		</dict>
 	</dict>
+	<key>X-NCP-APIGW-API-KEY</key>
+	<string>VgFQzLLwe57aS2SdVUzLG2imCIp2azEsfHZEu1hF</string>
+	<key>X-NCP-APIGW-API-KEY-ID</key>
+	<string>2xkmerjbz5</string>
 </dict>
 </plist>
